# jax-llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
.github/workflows/: tests.yaml
jax_llm/: embedding.py  modules.py  transformer.py  utils.py
tests/: test_embedding.py  test_modules.py  test_transformer.py
