[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_llm"
version = "0.0.1"
description = "A pedagogical implementation of a language model in JAX."
authors = [{name = "Sahel Iqbal", email = "sahel13miqbal@proton.me"}]
dependencies = [
  "jax",
  "flax",
  "grain",
  "tiktoken",
  "pandas",
]

[project.optional-dependencies]
test = [
  "pre-commit",
  "pytest",
]
dev = [
  "tensorboard",
  "tensorboard-plugin-profile",
]
